first commit : HTML :+1:

--- a/myapp/public/about-us.html
+++ b/myapp/public/about-us.html
@@ -2,30 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WEB CRAWLER - HOME</title>
+    <title>WEB CRAWLER - ABOUT US</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="./myapp/style/main.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
 </head>
 <body>
-
 <header>
     <nav class="navbar shadow-1 primary">
-        <a class="navbar-brand" href="/">Web-Crawler</a>
+        <a class="navbar-brand" href="/" target="_blank">Web-Crawler</a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler">Gitea</a>
             <a class="navbar-link" href="/about-us">About Us</a>
         </div>
     </nav>
 </header>
-<main>
-    <p> Hello Guys, it's our Web Crawler!</p>
-</main>
-<footer class="footer primary">
-    Clément Addario, Brahim Ganoui and Mathieu Pheron | Ynov Project.
-</footer>
 </body>
 </html>
-<script src="myapp/main.js" type="module"> getStats()</script>
-<script src="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/js/axentix.min.js"></script>
-
