--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -19,13 +19,33 @@
     </nav>
 </header>
 <main>
+
+    <script>
+
+        const url = 'http://localhost:80/streamers';
+
+        const promise01 = fetch(url, {
+            mode: "no-cors",
+            method: "GET",
+            cache: 'default',
+            headers: {
+                'Content-Type': 'application/json',
+            }
+
+        }).then((res) => console.log(res))
+
+
+    </script>
+
     <p> Hello Guys, it's our Web Crawler!</p>
+
+
 </main>
 <footer class="footer primary">
     Clément Addario, Brahim Ganoui and Mathieu Pheron | Ynov Project.
 </footer>
 </body>
 </html>
-<script src="myapp/main.js" type="module"> getStats()</script>
+<!--<script src="myapp/main.js" type="module"> getStats()</script>-->
 <script src="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/js/axentix.min.js"></script>
 
