--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -19,32 +19,65 @@
     </nav>
 </header>
 <main>
-
     <script>
 
-        const url = 'http://localhost:80/streamers';
+        let xhr = new XMLHttpRequest();
+        xhr.open('GET', 'http://localhost:8080/streamers', true);
 
-        const promise01 = fetch(url, {
-            mode: "no-cors",
-            method: "GET",
-            cache: 'default',
-            headers: {
-                'Content-Type': 'application/json',
+        xhr.responseType = 'json';
+        xhr.onload = function () {
+            if (xhr.readyState === xhr.DONE) {
+                if (xhr.status === 200) {
+                    let streamers = xhr.response
+                    console.log(streamers);
+                    let timeGetInfos = document.createElement("div")
+                    timeGetInfos.textContent = "Heure de la récupération des données : " + streamers[0];
+                    timeGetInfos.style.fontSize = 24 + 'px'
+                    document.body.appendChild(timeGetInfos)
+                    for (let i = 1; i <= 30; i++) {
+                        document.body.appendChild(document.createElement("br"))
+                        let divStreamer = document.createElement("div")
+                        divStreamer.setAttribute('id', `stream-${i}`);
+                        document.body.appendChild(divStreamer)
+
+                        let nameStreamer = document.createElement("div")
+                        nameStreamer.textContent = `n°${i} : `+streamers[i].nameStreamer
+                        //nameStreamer.href = streamers[i].title
+                        document.getElementById(`stream-${i}`).appendChild(nameStreamer)
+
+                        let title = document.createElement("div")
+                        title.textContent = streamers[i].title
+                        document.getElementById(`stream-${i}`).appendChild(title)
+
+                        let category = document.createElement("div")
+                        category.textContent = streamers[i].category
+                        document.getElementById(`stream-${i}`).appendChild(category)
+
+                        let viewer = document.createElement("div")
+                        viewer.textContent = streamers[i].viewers
+                        document.getElementById(`stream-${i}`).appendChild(viewer)
+
+                        let pdp = document.createElement("img")
+                        pdp.src = streamers[i].pdp
+                        document.getElementById(`stream-${i}`).appendChild(pdp)
+
+                        let miniature = document.createElement("img")
+                        miniature.src = streamers[i].miniature
+                        document.getElementById(`stream-${i}`).appendChild(miniature)
+                    }
+                }
             }
-
-        }).then((res) => console.log(res))
-
-
+        };
+        xhr.send(null);
     </script>
 
     <p> Hello Guys, it's our Web Crawler!</p>
 
 
 </main>
-<footer class="footer primary">
-    Clément Addario, Brahim Ganoui and Mathieu Pheron | Ynov Project.
-</footer>
+
 </body>
+
 </html>
 <!--<script src="myapp/main.js" type="module"> getStats()</script>-->
 <script src="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/js/axentix.min.js"></script>
