opens a new tab when clicking on a redirect button

--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar shadow-1 primary">
         <a class="navbar-brand" href="/">Web-Crawler</a>
         <div class="navbar-menu ml-auto">
-            <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler">Gitea</a>
+            <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler" target="_blank">Gitea</a>
             <a class="navbar-link" href="/about-us">About Us</a>
         </div>
     </nav>
