--- a/myapp/public/about-us.html
+++ b/myapp/public/about-us.html
@@ -15,6 +15,30 @@
             <a class="navbar-link" href="/about-us">About Us</a>
         </div>
     </nav>
+    <div style="text-align: center;">
+
+
+        <h3> Description:</h3>
+
+        This project was created for a school project.<br>
+        This project consists of retrieving some information from a web page.
+        In our case, we recover the top 30 streamers online on the Twitch platform sorted by number of viewers.
+        <br><br><br><br>
+        <h3> Implementation details:</h3>
+
+        We have created a web server in NodeJS.
+        <br>
+        To access to the website, we use Puppeteer which is a Node library, developed by Google which allows you to
+        control an instance of the Chrome Headless browser (Chrome without UI).<br><br><br><br>
+
+
+        <h3> Authors:</h3>
+        Clément Addario, Brahim Gnaoui, Pheron Mathieu.<br><br><br><br>
+
+        <img src="https://media.giphy.com/media/FihMsmKxNdStq/giphy.gif" alt="gifs" width="250"/>
+
+
+    </div>
 </header>
 </body>
 </html>
