404Notfound.js was create !

--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>WEB CRAWLER - HOME</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="./myapp/style/main.css" rel="stylesheet"/>
+    <link href="app.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
 </head>
 <body>
