--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <title>WEB CRAWLER - HOME</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="app.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="app.css">
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/76c060ffb5.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
 <header>
     <nav class="navbar shadow-1 primary">
         <a class="navbar-brand" href="/">Web-Crawler</a>
+        <a class="navbar-menu ml-auto fas fa-redo" href="/" style="margin-top: 5px"></a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler" target="_blank">Gitea</a>
             <a class="navbar-link" href="/about-us">About Us</a>
-            <a class="navbar-link" href="/">Reload </a>
         </div>
     </nav>
 </header>
