add href on error page

--- a/myapp/public/404NotFound.html
+++ b/myapp/public/404NotFound.html
@@ -20,7 +20,7 @@
 </header>
 <main>
     <h1>Something Wrong...</h1>
-    <p>Click  <a class="text-link" href="/">here</a>, and it would be our little secret that you don't know how to navigate a website</p>
+    <p>Click  <a class="text-link" href="/">here</a>, and it would be our little secret that you don't know how to navigate in a website...</p>
 </main>
 </body>
 </html>
