add twitch logo

--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -13,7 +13,11 @@
 
 <header>
     <nav class="navbar shadow-1 primary">
-        <a class="navbar-brand" href="/">Web-Crawler</a>
+
+        <a class="navbar-brand ml-5" href="/" >Web-Crawler</a>
+        <a class="navbar-brand fab fa-twitch" href="/" style="margin-top: 2px" ></a>
+
+
         <a class="navbar-menu ml-auto fas fa-redo" href="/" style="margin-top: 5px"></a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler" target="_blank">Gitea</a>
