--- a/myapp/public/404NotFound.html
+++ b/myapp/public/404NotFound.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WEB CRAWLER - ERROR</title>
+    <title>WEB CRAWLER - ERROR 404</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="app.css" rel="stylesheet"/>
+    <link href="app.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/76c060ffb5.js"></script>
 </head>
 <body>
 <header>
     <nav class="navbar shadow-1 primary">
-        <a class="navbar-brand" href="/">Web-Crawler</a>
+        <a class="navbar-brand" href="/" target="_blank">Web-Crawler</a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler"
                target="_blank">Gitea</a>
@@ -20,7 +21,8 @@
 </header>
 <main>
     <h1>Something Wrong...</h1>
-    <p>Click  <a class="text-link" href="/">here</a>, and it would be our little secret that you don't know how to navigate in a website...</p>
+    <p><a class="text-link" href="/">CLICK HERE</a>, and it would be our little secret that you don't know how to
+        navigate in a website...</p>
 </main>
 </body>
 </html>
