--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -8,12 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/76c060ffb5.js"></script>
 </head>
-<body>
+<body class="airforce light-4">
 
 <header>
-    <div class="navbar-fixed">
     <nav class="navbar shadow-1 primary">
-        <a class="navbar-brand" href="/" target="_blank">Web-Crawler</a>
+
+        <a class="navbar-brand ml-5" href="/" >Web-Crawler</a>
+        <a class="navbar-brand fab fa-twitch" href="/" style="margin-top: 2px" ></a>
+
+
         <a class="navbar-menu ml-auto fas fa-redo" href="/" style="margin-top: 5px"></a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler"
@@ -79,6 +82,8 @@
         };
         xhr.send(null);
     </script>
+
+    <p> Hello Guys, it's our Web Crawler!</p>
 
 
 </main>
