--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/76c060ffb5.js"></script>
 </head>
-<body class="airforce light-4">
+<body class="viride light-4">
 
 <header>
-    <nav class="navbar shadow-1 primary">
+    <nav class="navbar shadow-1 viride dark-3">
 
         <a class="navbar-brand ml-5" href="/" >Web-Crawler</a>
         <a class="navbar-brand fab fa-twitch" href="/" style="margin-top: 2px" ></a>
