fix about-us firstname placement Mathieu xd

--- a/myapp/public/about-us.html
+++ b/myapp/public/about-us.html
@@ -34,7 +34,7 @@
 
 
         <h3> Authors:</h3>
-        Clément Addario, Brahim Gnaoui, Pheron Mathieu.<br><br><br><br>
+        Clément Addario, Brahim Gnaoui,Mathieu Pheron .<br><br><br><br>
 
         <img alt="gifs" src="https://media.giphy.com/media/FihMsmKxNdStq/giphy.gif" width="250"/>
 
