add redirection to twitch page & delete button reload

--- a/myapp/public/about-us.html
+++ b/myapp/public/about-us.html
@@ -8,9 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/axentix@1.2.1/dist/css/axentix.min.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/76c060ffb5.js"></script>
 </head>
-<body>
+<body class="viride light-4">
+
 <header>
-    <nav class="navbar shadow-1 primary">
+    <nav class="navbar shadow-1 viride dark-3">
+
         <a class="navbar-brand" href="/" target="_blank">Web-Crawler</a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler"
