--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -25,7 +25,6 @@
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler"
                target="_blank">Gitea</a>
             <a class="navbar-link" href="/about-us">About Us</a>
-            <a class="navbar-link" href="/">Reload </a>
         </div>
 
     </nav>
@@ -53,7 +52,9 @@
                     document.body.append(container)
                     for (let i = 1; i <= 30; i++) {
 
-                        let bigDiv = document.createElement("div")
+                        let bigDiv = document.createElement("a")
+                        bigDiv.href = streamers[i].link
+                        bigDiv.target = "_blank"
                         bigDiv.setAttribute('class', `row-${i}`)
                         bigDiv.setAttribute('id', `bigDiv`)
                         container.appendChild(bigDiv)
