fix error page header

--- a/myapp/public/404NotFound.html
+++ b/myapp/public/404NotFound.html
@@ -10,14 +10,19 @@
 </head>
 <body>
 <header>
-    <nav class="navbar shadow-1 primary">
-        <a class="navbar-brand" href="/" target="_blank">Web-Crawler</a>
+    <nav class="navbar shadow-1 viride dark-3">
+        <a class="navbar-brand ml-5" href="/" >Web-Crawler</a>
+        <a class="navbar-brand fab fa-twitch" href="/" style="margin-top: 2px" ></a>
+        <a class="navbar-menu ml-auto fas fa-redo" href="/" style="margin-top: 5px"></a>
         <div class="navbar-menu ml-auto">
             <a class="navbar-link" href="https://git.ytrack.learn.ynov.com/MPHERON/web-crawler"
                target="_blank">Gitea</a>
             <a class="navbar-link" href="/about-us">About Us</a>
+            <a class="navbar-link" href="/">Reload </a>
         </div>
+
     </nav>
+    </div>
 </header>
 <main>
     <h1>Something Wrong...</h1>
