--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -16,8 +16,8 @@
 <header>
     <nav class="navbar shadow-1 viride dark-3">
 
-        <a class="navbar-brand ml-5" href="/" >Web-Crawler</a>
-        <a class="navbar-brand fab fa-twitch" href="/" style="margin-top: 2px" ></a>
+        <a class="navbar-brand ml-5" href="/" >Twitch Crawler</a>
+        <a class="navbar-brand fab fa-twitch" href="https://twitch.tv/" style="margin-top: 2px" ></a>
 
 
         <a class="navbar-menu ml-auto fas fa-redo" href="/" style="margin-top: 5px"></a>
